builded create(POST) and Read(GET) endpoints

--- a/serverless.yml
+++ b/serverless.yml
@@ -72,13 +72,19 @@ provider:
 functions:
   createProduct:
     handler: src/handlers.createProduct
+    events:
+      - httpApi:
+          path: /product
+          method: post
+  getProduct:
+    handler: src/handlers.getProduct
     #    The following are a few example events you can configure
     #    NOTE: Please make sure to change your handler code to work with those events
     #    Check the event documentation for details
     events:
       - httpApi:
-          path: /product
-          method: post
+          path: /product/{id}
+          method: get
 #      - websocket: $connect
 #      - s3: ${env:BUCKET}
 #      - schedule: rate(10 minutes)
