adding put endpoint in yml and handle, adding delete endpoint in yml and refactoring for removing duplication in handler

--- a/serverless.yml
+++ b/serverless.yml
@@ -82,6 +82,24 @@ functions:
       - httpApi:
           path: /product/{id}
           method: get
+  updateProduct:
+    handler: src/handlers.updateProduct
+    events:
+      - httpApi:
+          path: /product/{id}
+          method: put
+  deleteProduct:
+    handler: src/handlers.deleteProduct
+    events:
+      - httpApi:
+          path: /product/{id}
+          method: delete
+  listProduct:
+    handler: src/handlers.liustProduct
+    events:
+      - httpApi:
+          path: /products
+          method: get
 #      - websocket: $connect
 #      - s3: ${env:BUCKET}
 #      - schedule: rate(10 minutes)
