--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "@types/aws-lambda": "^8.10.81",
     "@types/node": "^16.4.3",
     "prettier": "^2.3.2",
-    "serverless": "^2.52.1",
-    "serverless-plugin-typescript": "^1.1.9",
+    "serverless": "^3.7.1",
+    "serverless-plugin-typescript": "^2.1.1",
     "typescript": "^4.3.5"
   },
   "dependencies": {
     "@types/uuid": "^8.3.4",
     "aws-lambda": "^1.0.6",
     "aws-sdk": "^2.953.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yup": "^0.32.11"
   }
 }
